<resources>
    <string name="app_name">My Social</string>


    <string name="facebook_app_id">1471915382921757</string>
    <string name="fb_login_protocol_scheme">fb1471915382921757</string>
    <string name="username">Username</string>
    <string name="main_logo">Main Logo</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="not_a_member">Not a member? Sign Up</string>
    <string name="signup">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="password_min_chars">Password (min 6 character)</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="welcome">Welcome</string>
    <string name="new_post">What\'s on your mind?</string>
    <string name="just_now">Just Now</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="vamshedhar_reddy">Vamshedhar Reddy</string>
    <string name="logout">Logout</string>
    <string name="friends">Friends</string>
    <string name="add_friends">Add New Friends</string>
    <string name="friend_requests">Friend Requests</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sent">Sent</string>
    <string name="birthday">Birthday</string>
    <string name="wall_string">\'s Wall</string>
    <string name="wall">Wall</string>
    <string name="your_wall">Your Wall</string>
    <string name="submit">Submit</string>
</resources>
