<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeBtn"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/friendsBtn"
        android:enabled="true"
        android:icon="@drawable/ic_friends_24dp"
        android:title="@string/friends"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/notificationsBtn"
        android:enabled="true"
        android:icon="@drawable/ic_bookmark_black_24dp"
        android:title="@string/notifications"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/profileBtn"
        android:enabled="true"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/profile"
        app:showAsAction="always|withText" />
</menu>