<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.vamshedhar.mysocial.activities.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/main_logo"
            app:srcCompat="@drawable/app_icon"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/FloatingEditText"
            android:id="@+id/textInputLayout2">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fullNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout2"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/FloatingEditText"
            android:id="@+id/textInputLayout3">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout3"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/FloatingEditText"
            android:id="@+id/dobLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthday"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dobLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/FloatingEditText"
            android:id="@+id/passwordWrap">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_min_chars"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordWrap"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/FloatingEditText"
            android:id="@+id/rPasswordWrap">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/repeatPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="250dp"
            android:layout_height="61dp"
            android:layout_below="@+id/rPasswordWrap"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:onClick="onSignUpClick"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="250dp"
            android:layout_height="61dp"
            android:layout_below="@+id/signupBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:onClick="onCancelClick"/>
    </RelativeLayout>

</ScrollView>
