<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/vamshedhar_reddy"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/postTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/just_now"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/postContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/postTime"
        android:layout_marginTop="5dp"
        android:text="@string/dummy_text"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"/>

    <View
        android:id="@+id/itemSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/postContent"
        android:background="@color/grayBorder"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="3dp" />


</RelativeLayout>