<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.vamshedhar.mysocial.activities.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/main_logo"
            app:srcCompat="@drawable/app_icon" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/FloatingEditText">

            <EditText
                android:id="@+id/usernameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_name"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/FloatingEditText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/loginBtn"
            android:layout_width="250dp"
            android:layout_height="61dp"
            android:layout_below="@+id/textInputLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/or"
            android:textSize="22sp" />

        <Button
            android:id="@+id/google_login_btn"
            android:layout_width="250dp"
            android:layout_height="61dp"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/google_signin" />

        <Button
            android:id="@+id/fb_login_btn"
            android:layout_width="250dp"
            android:layout_height="61dp"
            android:layout_below="@+id/google_login_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/fb_login_default" />

        <TextView
            android:id="@+id/signupBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/fb_login_btn"
            android:layout_marginTop="15dp"
            android:text="@string/not_a_member"
            android:textSize="22sp"
            android:onClick="onSignupClick"/>

    </RelativeLayout>
</ScrollView>
