<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/postTime"
        android:text="@string/vamshedhar_reddy"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/postTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/just_now"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/postContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/deletePostBtn"
        android:minLines="3"
        android:text="@string/dummy_text"
        android:textSize="16sp" />

    <View
        android:id="@+id/itemSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/postContent"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="3dp"
        android:background="@color/grayBorder" />

    <ImageView
        android:id="@+id/deletePostBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/postContent"
        android:layout_alignEnd="@+id/itemSeparator"
        app:srcCompat="@android:drawable/ic_menu_delete" />

</RelativeLayout>