<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.vamshedhar.mysocial.activities.HomeActivity"
    android:background="@color/mainBackground">



    <RelativeLayout
        android:id="@+id/titleWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="15dp"
        android:elevation="3dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/welcome"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/userFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/textView"
            android:text="@string/vamshedhar_reddy"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="onCurrentUserClick"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/newPostWrapper"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/titleWrapper"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:elevation="3dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp">

        <EditText
            android:id="@+id/newPostET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/postBtn"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/new_post"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLength="200"
            android:minLines="2" />

        <ImageView
            android:id="@+id/postBtn"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/newPostET"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/new_post"
            android:onClick="onPostBtnClick"
            app:srcCompat="@drawable/ic_post" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/userWallWrapper"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/white"
        android:layout_below="@+id/titleWrapper"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="5dp"
        android:elevation="3dp">

        <TextView
            android:id="@+id/friendName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:text="@string/vamshedhar_reddy"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wallString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/friendName"
            android:layout_toEndOf="@+id/friendName"
            android:text="@string/wall_string"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/newPostWrapper">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/usersWall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:itemBackground="@drawable/bottom_navigation_background"
            app:itemIconTint="@drawable/bottom_navigation_text"
            app:itemTextColor="@drawable/bottom_navigation_text"
            app:menu="@menu/bottom_navigaton_menu"
            android:layout_gravity="bottom"
            android:elevation="8dp"/>

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
