<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.vamshedhar.mysocial.activities.ProfileActivity">

    <RelativeLayout
        android:id="@+id/titleWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="15dp"
        android:elevation="3dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/welcome"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/userFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/textView"
            android:layout_toStartOf="@+id/editBtn"
            android:text="@string/vamshedhar_reddy"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/editBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@android:drawable/ic_menu_edit" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/userWallWrapper"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/white"
        android:layout_below="@+id/titleWrapper"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="5dp"
        android:elevation="3dp">

        <TextView
            android:id="@+id/friendName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:text="@string/your_wall"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/userWallWrapper">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/usersWall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:itemBackground="@drawable/bottom_navigation_background"
            app:itemIconTint="@drawable/bottom_navigation_text"
            app:itemTextColor="@drawable/bottom_navigation_text"
            app:menu="@menu/bottom_navigaton_menu"
            android:layout_gravity="bottom"
            android:elevation="8dp"/>

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
